# whisper-transcribe

./: .gitignore  Cargo.toml  GITHUB_RELEASE.md  README.md  RELEASE_NOTES.md
installer/: whisper-transcribe.iss
scripts/: build-cuda.ps1  build-release.ps1
src/: main.rs
